k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-v6
  namespace: default
  labels:
    app: testapp-v6
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: testapp-v6
